Changes in QMPlay2 build 16.07.05:
	- Ubuntu Unity integration (MPRIS2 and shortcut groups),
	- added video equalizer to "Settings/Video filters",
	- new "Concept" icons by Alexey Varfolomeev,
	- updated Russian translation (victorr2007),
	- properly add many files containing tracks,
	- MPRIS2, CMake and PLS fixes,

Changes in QMPlay2 build 16.07.02:
	- update pause and buffered data information when demuxer is busy,
	- move "modules" directory from "share/qmplay2" to "lib/qmplay2",
	- allow file group and Audio CD tracks synchronization:
		- synchronize automatically when loading the same playlist into a group,
		- synchronize automatically when loading Audio CD tracks,
		- on "F5" key,
	- show more warnings in VDPAU and appearance settings,
	- fixed color in graphics subtitles (e.g. dvdsub),
	- reading files doesn't depend on FFmpeg module,
	- hide mouse cursor when cover image is visible,
	- updated Russian translation (victorr2007),
	- allow mouse wheel to change the volume,
	- show blurred covers as a background,
	- added CMake build (Zamarin Arthur),
	- OpenGL2 now uses PBO if available,
	- bugfix,

Changes in QMPlay2 build 16.06.01:
	- diplaying and filtering all planar 8-bit YUV pixel formats (only OpenGL2 and QPainter video outputs)
	- allow to display only file names in playlist,
	- update Russian translation (victorr2007),
	- allow to detach from receiving commands,
	- allow to remember the repeat mode,
	- added random and repeat playback,
	- minor fixes in FPS and A/V sync,
	- support video size changes,
	- fix "rawvideo" playback,
	- bugfix,

Changes in QMPlay2 build 16.05.06:
	- split muted icon to muted and not muted,
	- bugfix,

Changes in QMPlay2 build 16.05.02:
	- fixed command line argument processing (now is possible to properly open or enqueue multiple files on Linux),
	- playlist uses floating-point variables for storing length (accurate group length information),
	- added audio balance (right click on volume slider to split channels),