@@ -1,6 +1,5 @@
 HW and SW filters settings in the same place
 User can type any aspect ratio and zoom
-Handle auto channels/samplerate change
 Video preview on progress bar
 Improve radio stations
 Add key bindings
