@@ -1,9 +1,10 @@
-Changes in QMPlay2 build 16.07.05:
+Changes in QMPlay2 build 16.07.07:
 	- Ubuntu Unity integration (MPRIS2 and shortcut groups),
 	- added video equalizer to "Settings/Video filters",
 	- new "Concept" icons by Alexey Varfolomeev,
 	- updated Russian translation (victorr2007),
 	- properly add many files containing tracks,
+	- handle audio parameters changes,
 	- MPRIS2, CMake and PLS fixes,
 
 Changes in QMPlay2 build 16.07.02:
